--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -10,7 +10,8 @@
 
 :root {
   /* --title-font: "Montserrat", sans-serif; */
-  --title-font: "Bebas Neue", sans-serif;
+  /* --title-font: "Bebas Neue", sans-serif; */
+  --title-font: "Roboto", sans-serif;
   --title-font-size: 32px;
   /* --title-font:  "Playwrite IT Moderna", cursive; */
   --remix-icon: "remixicon";
@@ -21,8 +22,8 @@
   /* --Kaushan: "Lato", sans-serif; */
   /* --Dm: "DM Sans", sans-serif; */
   /* --Dm: "Lato", sans-serif; */
-  --goreme-color: #c24e2e;
-  --goreme-color-blue: #2e94c2;
+  --goreme-color: rgb(194, 78, 46);
+  --goreme-color-blue: rgb(46, 148, 194);
   --white: #fff;
   --light: #d8dbe0;
   --dark: #28292c;
@@ -14720,6 +14721,7 @@ object {
 }
 
 .section-title .title {
+  font-family: var(--title-font);
   font-size: 40px;
   font-weight: 700;
   color: var(--primary-title);
@@ -25718,6 +25720,11 @@ button.applyBtn.btn.btn-sm.btn-primary {
   border: 1px solid var(--tertiary-border);
   -webkit-transition: 0.3s;
   transition: 0.3s;
+  -webkit-filter: grayscale(1);
+  -moz-filter: grayscale(100%);
+  -ms-filter: grayscale(100%);
+  -o-filter: grayscale(100%);
+  filter: grayscale(100%);
 }
 
 .news-card-two:hover {
@@ -25725,6 +25732,11 @@ button.applyBtn.btn.btn-sm.btn-primary {
   transition: 0.3s;
   -webkit-box-shadow: 0px 8px 12px 0px rgba(144, 149, 150, 0.2);
   box-shadow: 0px 8px 12px 0px rgba(144, 149, 150, 0.2);
+  -webkit-filter: grayscale(0);
+  -moz-filter: grayscale(0%);
+  -ms-filter: grayscale(0%);
+  -o-filter: grayscale(0%);
+  filter: grayscale(0%);
 }
 
 .news-card-two .news-banner-two img {
@@ -26877,8 +26889,8 @@ button.applyBtn.btn.btn-sm.btn-primary {
 }
 
 .map-frame {
-  -webkit-filter: grayscale(100%) invert(92%) contrast(83%);
-  filter: grayscale(100%) invert(92%) contrast(83%);
+  /* -webkit-filter: grayscale(100%) invert(92%) contrast(83%); */
+  /* filter: grayscale(100%) invert(92%) contrast(83%); */
   margin-bottom: -15px;
   width: 100%;
 }
@@ -31307,4 +31319,143 @@ button.applyBtn.btn.btn-sm.btn-primary {
 
 [data-theme=dark] .sign-with .icon-login-section .icon-login a {
   border: 1px solid var(--secondary-border);
+}
+
+.card {
+  border: none;
+  transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+  overflow: hidden;
+  border-radius: 20px;
+  min-height: 450px;
+  box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 768px) {
+  .card {
+    min-height: 350px;
+  }
+}
+
+@media (max-width: 420px) {
+  .card {
+    min-height: 300px;
+  }
+}
+
+.card.card-has-bg {
+  transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+  background-size: 120%;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.card.card-has-bg:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: inherit;
+  -webkit-filter: grayscale(1);
+  -moz-filter: grayscale(100%);
+  -ms-filter: grayscale(100%);
+  -o-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
+
+.card.card-has-bg:hover {
+  box-shadow: 0 0 5px -2px rgba(0, 0, 0, 0.3);
+  background-size: 130%;
+  transition: all 500ms ease-in-out;
+  -webkit-filter: grayscale(0);
+  -moz-filter: grayscale(0%);
+  -ms-filter: grayscale(0%);
+  -o-filter: grayscale(0%);
+  filter: grayscale(0%);
+}
+
+.card.card-has-bg:hover .card-img-overlay,
+.card.card-has-bg:hover:before {
+  transition: all 800ms ease-in-out;
+  background: rgba(0, 0, 0, 0.05);
+  background: linear-gradient(0deg, rgb(186 137 93 / 30%) 0%, rgba(0, 0, 0, 0.05) 100%);
+  -webkit-filter: grayscale(0);
+  -moz-filter: grayscale(0%);
+  -ms-filter: grayscale(0%);
+  -o-filter: grayscale(0%);
+  filter: grayscale(0%);
+}
+
+.card .card-footer {
+  background: none;
+  border-top: none;
+}
+
+.card .card-footer .media img {
+  border: solid 3px rgba(255, 255, 255, 0.3);
+}
+
+.card .card-title {
+  font-weight: 800;
+  background: #ffffff9c;
+  border-radius: 12px;
+  padding: 10px;
+}
+
+.card .card-title a,
+.card .card-title a:visited {
+  color: #000;
+}
+
+.card .card-meta {
+  background: #ffffff9c;
+  border-radius: 12px;
+  color: rgb(0 0 0);
+  padding: 10px;
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 2px;
+}
+
+.card .card-body {
+  transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+  color: #000;
+}
+
+.card-body small {
+  color: #000;
+  background: #ffffff9c;
+  border-radius: 12px;
+  padding: 10px;
+}
+
+.card:hover {
+  transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.card:hover .card-body {
+  margin-top: 30px;
+  transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.card .card-img-overlay {
+  transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+  background: rgba(0, 0, 0, 0.05);
+  background: linear-gradient(0deg, rgba(255, 186, 33, 0.4) 0%, rgba(0, 0, 0, 0.05) 100%);
+}
+
+
+.overlay {
+  background-repeat: no-repeat;
+  background-size: 100%;
+  position: relative;
+  height: 100%;
+}
+
+.bg-goreme {
+  background: linear-gradient(rgba(185, 221, 225, .5), rgba(185, 221, 225, .5)), url(../../images/goremeyi-kesfet.jpg);
+  background-size: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
