--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -11,19 +11,21 @@
 
 
 :root {
-  --special-font: "Playwrite SK", cursive;
-  /* --title-font: "Montserrat", sans-serif; */
+  /* --special-font: "Playwrite SK", cursive; */
+  --special-font: "Montserrat", sans-serif;
+  --title-font: "Montserrat", sans-serif;
   /* --title-font: "Bebas Neue", sans-serif; */
-  --title-font: "Roboto", sans-serif;
+  /* --title-font: "Roboto", sans-serif; */
   --title-font-size: 32px;
   /* --title-font:  "Playwrite IT Moderna", cursive; */
   --remix-icon: "remixicon";
   /* --Kaushan: "Kaushan Script", cursive; */
-  --Dm: "Roboto", sans-serif;
+  /* --Dm: "Montserrat", sans-serif; */
   /* --Dm: "Roboto", sans-serif; */
-  --Kaushan: "Roboto", sans-serif;
+  /* --Kaushan: "Roboto", sans-serif; */
+  --Kaushan: "Montserrat", sans-serif;
   /* --Kaushan: "Lato", sans-serif; */
-  /* --Dm: "DM Sans", sans-serif; */
+  --Dm: "DM Sans", sans-serif;
   /* --Dm: "Lato", sans-serif; */
   /* --goreme-color: rgb(194, 78, 46); */
   --goreme-color: #244979;
@@ -109,6 +111,10 @@
   --dark-bg4: #252525;
   --dark-bg5: #2C2C2C;
   --dark-bg6: #2E2E2E;
+}
+
+body {
+  font-family: var(--Dm) !important;
 }
 
 /*-- Margin Padding --*/
@@ -20618,7 +20624,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
   content: "\f1af";
   font-family: "remixIcon";
   font-size: 16px;
-  margin-top: 8px;
+  margin-top: 4px;
   line-height: 1;
   color: var(--primary-title);
 }
@@ -20627,8 +20633,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.4;
-  color: var(--primary-title);
-  text-transform: capitalize;
+  color: var(--secondary-color);
   font-family: var(--Kaushan);
 }
 
@@ -26605,7 +26610,6 @@ button.applyBtn.btn.btn-sm.btn-primary {
 .explore-banner {
   margin-top: 30px;
   border-radius: 16px;
-  max-height: 298px;
   overflow: hidden;
 }
 
@@ -31467,4 +31471,475 @@ button.applyBtn.btn.btn-sm.btn-primary {
 
 .special-text {
   font-family: var(--special-font);
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide .content {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.8)));
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.8));
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  padding: 35px;
+}
+
+.swiper-slide .content .title {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: white;
+}
+
+.swiper-slide .content .desciption {
+  font-size: 2rem;
+  font-weight: bold;
+  color: white;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.swiper-slide {
+  background-size: cover;
+  background-position: center;
+}
+
+.mySwiper2 {
+  height: 80%;
+  width: 100%;
+}
+
+.mySwiper {
+
+  height: 80px;
+  box-sizing: border-box;
+  padding: 10px 0;
+}
+
+.mySwiper .swiper-slide {
+  width: 25%;
+  height: 100%;
+  opacity: 0.4;
+}
+
+.mySwiper .swiper-slide-thumb-active {
+  opacity: 1;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.profile-card-4 {
+  max-width: 370px;
+  background-color: #FFF;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+}
+
+.profile-card-4 img {
+  transition: all 0.25s linear;
+}
+
+.profile-card-4 .profile-content {
+  position: relative;
+  padding: 15px;
+  background-color: #FFF;
+}
+
+.profile-card-4 .profile-name {
+  font-weight: bold;
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: -70px;
+  color: #FFF;
+  font-size: 16px;
+  background: rgb(0 0 0 / 50%);
+}
+
+.profile-card-4 .profile-name p {
+  font-weight: 600;
+  font-size: 13px;
+  letter-spacing: 1.5px;
+}
+
+.profile-card-4 .profile-description {
+  color: #777;
+  font-size: 12px;
+  padding: 10px;
+}
+
+.profile-card-4 .profile-overview {
+  padding: 15px 0px;
+}
+
+.profile-card-4 .profile-overview p {
+  font-size: 10px;
+  font-weight: 600;
+  color: #777;
+}
+
+.profile-card-4 .profile-overview h4 {
+  color: #273751;
+  font-weight: bold;
+}
+
+.profile-card-4 .profile-content::before {
+  content: "";
+  position: absolute;
+  height: 20px;
+  top: -10px;
+  left: 0px;
+  right: 0px;
+  background-color: #FFF;
+  z-index: 0;
+}
+
+.profile-card-4:hover img {
+  transform: rotate(5deg) scale(1.1, 1.1);
+  filter: brightness(110%);
+}
+
+#zuck-modal-content .story-viewer .slides .item.active,
+#zuck-modal-content .story-viewer .slides .item.active .tip.link {
+  display: flex !important;
+  align-content: center !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+
+#zuck-modal-content .story-viewer .slides .item>.media {
+  height: auto !important;
+  max-height: 100% !important;
+}
+
+
+.announcement-item {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  background-color: #fff;
+  width: 100%;
+}
+
+.announcement-text {
+  margin-left: 10px;
+}
+
+
+.pagination-container {
+  margin: 100px auto;
+  text-align: center;
+}
+
+.pagination {
+  position: relative;
+}
+
+.pagination a {
+  position: relative;
+  display: inline-block;
+  color: var(--tertiary-btn);
+  text-decoration: none;
+  padding: 8px 16px 10px;
+}
+
+.pagination a:before {
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  content: "";
+  top: 0;
+  left: 0;
+  background-color: var(--tertiary-btn);
+  border-radius: 24px;
+  transform: scale(0);
+  transition: all 0.2s;
+}
+
+.pagination a:hover,
+.pagination a .pagination-active {
+  color: #fff;
+}
+
+.pagination a:hover:before,
+.pagination a .pagination-active:before {
+  transform: scale(1);
+}
+
+.pagination .pagination-active {
+  color: #fff;
+}
+
+.pagination .pagination-active:before {
+  transform: scale(1);
+}
+
+.pagination-newer {
+  margin-right: 50px;
+}
+
+.pagination-older {
+  margin-left: 50px;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.autoplay-progress {
+  position: absolute;
+  right: 5px;
+  top: 0px;
+  z-index: 10;
+  width: 24px;
+  height: 24px;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--swiper-theme-color);
+}
+
+.autoplay-progress svg {
+  --progress: 0;
+  position: absolute;
+  left: 0;
+  top: 0px;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  stroke-width: 1px;
+  stroke: var(--swiper-theme-color);
+  fill: none;
+  stroke-dashoffset: calc(125.6px * (1 - var(--progress)));
+  stroke-dasharray: 125.6;
+  transform: rotate(-90deg);
+}
+
+.event-card {
+  border-radius: 8px;
+  padding: 15px;
+  text-align: center;
+}
+
+.event-card img {
+  width: 100%;
+  border-radius: 8px;
+}
+
+.event-details {
+  margin-top: 15px;
+}
+
+.event-details h5 {
+  margin-bottom: 10px;
+}
+
+.event-details .date,
+.event-details .time,
+.event-details .location {
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.box {
+  background: #fff;
+  border-radius: 12px;
+  overflow: hidden;
+  border: 0 solid #efefef;
+  box-shadow: 0 0 5px rgba(0, 0, 0, .1)
+}
+
+.box .box-header {
+  padding: 0 25px;
+  display: flex;
+  border-bottom: 1px solid #efefef;
+  height: 70px;
+  justify-content: space-between;
+  align-items: stretch
+}
+
+.box .box-header .box-title {
+  margin: 0;
+  font-size: 22px;
+  font-weight: 700;
+  display: flex;
+  align-items: center
+}
+
+.box .box-header a {
+  font-size: 14px
+}
+
+.box .box-header .controls {
+  display: flex;
+  align-items: stretch
+}
+
+.box .box-header .controls a,
+.box .box-header .controls button {
+  background: 0 0;
+  border: 0;
+  display: flex;
+  width: 30px;
+  align-items: center;
+  justify-content: center
+}
+
+.box .box-header .controls a:hover,
+.box .box-header .controls button:hover {
+  text-decoration: none;
+  color: var(--red)
+}
+
+.box .box-header .controls a i,
+.box .box-header .controls button i {
+  font-size: 1.2rem
+}
+
+.box .box-body {
+  padding: 25px
+}
+
+
+.event-list .event a {
+  gap: 20px
+}
+
+.event-list .event a:hover {
+  text-decoration: none;
+  color: inherit
+}
+
+.event-list .event a:hover .info .name strong {
+  color: var(--red)
+}
+
+.event-list .event .photo {
+  border-radius: var(--border-radius);
+  overflow: hidden;
+  display: flex;
+  flex: 0 0 150px
+}
+
+.event-list .event .photo img {
+  width: 100%;
+  height: 315px
+}
+
+.event-list .event .info {
+  display: flex;
+  flex: 0 auto;
+  flex-direction: column
+}
+
+.event-list .event .info .name {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column
+}
+
+.event-list .event .info .name strong {
+  display: block;
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 1.125rem
+}
+
+.event-list .event .info .name p {
+  color: #444;
+  display: block;
+  margin: 0;
+  font-weight: 400;
+  font-size: 1rem
+}
+
+.event-list .event .info .item {
+  margin-bottom: 5px;
+  display: flex;
+  border: 1px solid #efefef;
+  border-radius: var(--border-radius);
+  align-items: stretch
+}
+
+.event-list .event .info .item label {
+  color: var(--red);
+  display: flex;
+  flex: 0 0 40px;
+  background: #f4f4f4;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  min-height: 40px;
+  font-size: .925rem
+}
+
+.event-list .event .info .item span {
+  display: flex;
+  flex: 0 100%;
+  align-items: center;
+  padding: 5px 15px
 }
