--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -19083,7 +19083,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
 .header-area-three .top-menu-wrapper {
   padding-top: 5px;
   padding-bottom: 5px;
-  border-bottom: 1px solid var(--tertiary-border);
+  /* border-bottom: 1px solid var(--tertiary-border); */
   position: relative;
 }
 
@@ -19176,8 +19176,8 @@ button.applyBtn.btn.btn-sm.btn-primary {
 .header-area-three .main-menu .listing .single-list .single {
   -webkit-transition: 0s;
   transition: 0s;
-  font-size: 14px;
-  font-weight: 500;
+  font-size: 16px;
+  font-weight: 700;
   line-height: 1.3;
   font-family: var(--menu-font);
   color: var(--primary-title);
@@ -19363,7 +19363,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
 .header-area-three .header-right-three .lang {
   color: var(--primary-title);
   border-radius: 30px;
-  border: 1px solid var(--tertiary-border);
+  /* border: 1px solid var(--tertiary-border); */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
