--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -25736,6 +25736,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
     :: Nes Card 02
 -----------------------------------------------*/
 .news-card-two {
+  background: white;
   border-radius: 12px;
   overflow: hidden;
   border: 1px solid var(--tertiary-border);
@@ -31677,6 +31678,11 @@ button.applyBtn.btn.btn-sm.btn-primary {
   width: 100%;
 }
 
+.announcement-item:hover {
+  transition: all 0.2s;
+  box-shadow: 0px 8px 12px 0px rgba(144, 149, 150, 0.2);
+}
+
 .announcement-text {
   margin-left: 10px;
 }
@@ -31874,9 +31880,8 @@ button.applyBtn.btn.btn-sm.btn-primary {
 }
 
 .box .box-body {
-  padding: 25px
+  padding: 15px
 }
-
 
 .event-list .event a {
   gap: 20px
@@ -32044,7 +32049,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
   right: 40px;
 }
 
- 
+
 .button-29 {
   color: white !important;
   align-items: center;
@@ -32052,7 +32057,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
   background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
   border: 0;
   border-radius: 6px;
-  box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
+  box-shadow: rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, rgba(58, 65, 111, .5) 0 -3px 0 inset;
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
@@ -32067,12 +32072,12 @@ button.applyBtn.btn.btn-sm.btn-primary {
   position: relative;
   text-align: left;
   text-decoration: none;
-  transition: box-shadow .15s,transform .15s;
+  transition: box-shadow .15s, transform .15s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
   white-space: nowrap;
-  will-change: box-shadow,transform;
+  will-change: box-shadow, transform;
   font-size: 14px;
 }
 
@@ -32089,6 +32094,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
   box-shadow: #3c4fe0 0 3px 7px inset;
   transform: translateY(2px);
 }
+
 .button-30 {
   color: white !important;
   align-items: center;
