--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -14746,7 +14746,7 @@ object {
 
 .section-title .title {
   font-family: var(--title-font);
-  font-size: 40px;
+  font-size: 62px;
   font-weight: 700;
   color: var(--primary-title);
   text-transform: capitalize;
@@ -26541,17 +26541,18 @@ button.applyBtn.btn.btn-sm.btn-primary {
 .feature-area-bg::before {
   position: absolute;
   content: "";
-  background-image: url("../images/gallery/feature-bg.png");
+  background-image: url("../images/goreme-siluet.png");
   background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 0.75;
+  background-size: 100%;
+  opacity: 0.25;
   width: 100%;
-  height: 332px;
+  height: 100%;
   left: 0;
   bottom: 0;
   right: 0;
   z-index: 0;
   background-repeat: no-repeat;
+  background-position: bottom center;
 }
 
 .favSwiper-active .swiper-button-next::after,
