--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -21,7 +21,7 @@
   --title-font: "Oooh Baby", sans-serif;
   /* --title-font: "Bebas Neue", sans-serif; */
   /* --title-font: "Roboto", sans-serif; */
-  --title-font-size: 32px;
+  --title-font-size: 42px;
   /* --title-font:  "Playwrite IT Moderna", cursive; */
   --remix-icon: "remixicon";
   /* --Kaushan: "Kaushan Script", cursive; */
@@ -36,12 +36,12 @@
   /* --goreme-color: rgb(194, 78, 46); */
   --goreme-color: #244979;
   --goreme-color-blue: rgb(46, 148, 194);
-  --white: #f7f8fb;
+  --white: #FFFFFF;
   --light: #d8dbe0;
   --dark: #28292c;
   --info: #0dcaf0;
   /* --body: rgba(255, 255, 255, .1); */
-  --body: #f7f8fb;
+  --body: #FFFFFF;
   --primary-color: #244979;
   --secondary-color: #c2a42e;
   --tertiary-color: #39a1f0;
@@ -22158,7 +22158,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
   font-size: var(--title-font-size);
   color: var(--primary-title);
   letter-spacing: .15em;
-  font-weight: 400;
+  font-weight: 700;
   text-align: center;
   display: block;
   margin: 0 auto;
