--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -31592,79 +31592,6 @@ button.applyBtn.btn.btn-sm.btn-primary {
   object-fit: cover;
 }
 
-.profile-card-4 {
-  max-width: 370px;
-  background-color: #FFF;
-  border-radius: 5px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  position: relative;
-  cursor: pointer;
-}
-
-.profile-card-4 img {
-  transition: all 0.25s linear;
-}
-
-.profile-card-4 .profile-content {
-  position: relative;
-  padding: 15px;
-  background-color: #FFF;
-}
-
-.profile-card-4 .profile-name {
-  font-weight: bold;
-  position: absolute;
-  left: 0px;
-  right: 0px;
-  top: -70px;
-  color: #FFF;
-  font-size: 16px;
-  background: rgb(0 0 0 / 50%);
-}
-
-.profile-card-4 .profile-name p {
-  font-weight: 600;
-  font-size: 13px;
-  letter-spacing: 1.5px;
-}
-
-.profile-card-4 .profile-description {
-  color: #777;
-  font-size: 12px;
-  padding: 10px;
-}
-
-.profile-card-4 .profile-overview {
-  padding: 15px 0px;
-}
-
-.profile-card-4 .profile-overview p {
-  font-size: 10px;
-  font-weight: 600;
-  color: #777;
-}
-
-.profile-card-4 .profile-overview h4 {
-  color: #273751;
-  font-weight: bold;
-}
-
-.profile-card-4 .profile-content::before {
-  content: "";
-  position: absolute;
-  height: 20px;
-  top: -10px;
-  left: 0px;
-  right: 0px;
-  background-color: #FFF;
-  z-index: 0;
-}
-
-.profile-card-4:hover img {
-  transform: rotate(5deg) scale(1.1, 1.1);
-  filter: brightness(110%);
-}
 
 #zuck-modal-content .story-viewer .slides .item.active,
 #zuck-modal-content .story-viewer .slides .item.active .tip.link {
@@ -32003,9 +31930,17 @@ button.applyBtn.btn.btn-sm.btn-primary {
   bottom: 70px;
   font-size: 30px;
   color: #FFF;
+  font-family: var(--title-font);
   text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
   font-weight: bold;
   transition: all linear 0.25s;
+}
+
+.profile-card-2 .profile-name p {
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 1.5px;
+  color: #FFF !important;
 }
 
 .profile-card-2 .profile-icons {
