--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -19286,7 +19286,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
   position: absolute;
   width: 260px;
   background: var(--white);
-  background: rgba(255, 255, 255, 0.25);
+  background: rgba(255, 255, 255, 0.7);
   box-shadow: 0 0px 22px 0 rgba(255, 255, 255, 0.37);
   backdrop-filter: blur(12px);
   padding: 21px 0px;
@@ -26923,9 +26923,9 @@ button.applyBtn.btn.btn-sm.btn-primary {
 }
 
 .map-frame {
-  /* -webkit-filter: grayscale(100%) invert(92%) contrast(83%); */
-  /* filter: grayscale(100%) invert(92%) contrast(83%); */
-  margin-bottom: -15px;
+  /* -webkit-filter: grayscale(100%) invert(92%) contrast(83%);
+  filter: grayscale(100%) invert(92%) contrast(83%); */
+  margin-bottom: -30px;
   width: 100%;
 }
 
@@ -32111,12 +32111,27 @@ button.applyBtn.btn.btn-sm.btn-primary {
   content: "";
   position: absolute;
   top: 0;
-  opacity: .7;
-  background-image: url("../images/goreme-bg-2.jpg");
-  background-size: 100%;
+  background-image: url("../images/bg-shape-goreme-2.jpg");
+  background-size: contain;
   width: 100%;
   height: 100%;
   z-index: -1;
   background-repeat: no-repeat;
-  background-position: top;
+  background-position: left bottom;
+  background-color: #ededed;
+}
+
+.goreme-bg-blog::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  background-image: url("../images/new-goreme-bg.jpg");
+  background-size: 100% auto;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: #ededed;
+  opacity: .6;
 }
