--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -10,6 +10,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+SK:wght@100..400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Oooh+Baby&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Jost:ital,wght@0,100..900;1,100..900&family=Oooh+Baby&display=swap');
 
 
 
@@ -18,7 +19,7 @@
   --menu-font: "Jost", sans-serif;
   --special-font: "Montserrat", sans-serif;
   --special-font-2: "Oooh Baby", sans-serif;
-  --title-font: "Oooh Baby", sans-serif;
+  --title-font: "Josefin Sans", sans-serif;
   /* --title-font: "Bebas Neue", sans-serif; */
   /* --title-font: "Roboto", sans-serif; */
   --title-font-size: 42px;
@@ -31,7 +32,7 @@
   --Kaushan: "Montserrat", sans-serif;
   /* --Kaushan: "Lato", sans-serif; */
   /* --Dm: "DM Sans", sans-serif; */
-  --Dm: "Roboto", sans-serif;
+  --Dm: "Josefin Sans", sans-serif;
   /* --Dm: "Lato", sans-serif; */
   /* --goreme-color: rgb(194, 78, 46); */
   --goreme-color: #244979;
@@ -14747,7 +14748,7 @@ object {
 .section-title .title {
   font-family: var(--title-font);
   font-size: 62px;
-  font-weight: 700;
+  font-weight: 300;
   color: var(--primary-title);
   text-transform: capitalize;
   line-height: 1.1;
@@ -18643,7 +18644,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
 }
 
 .header-sticky.sticky-bar {
-  z-index: 20;
+  z-index: 40;
   background-color: var(--white);
 }
 
@@ -19111,7 +19112,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 38px;
+  gap: 10px;
 }
 
 .header-area-three .top-menu-wrapper .top-header-right .contact-section {
@@ -22159,11 +22160,11 @@ button.applyBtn.btn.btn-sm.btn-primary {
 }
 
 .border-section-title .title {
-  font-family: var(--special-font-2);
+  font-family: var(--title-font);
   font-size: var(--title-font-size);
   color: var(--primary-title);
   letter-spacing: .15em;
-  font-weight: 700;
+  font-weight: 300;
   text-align: center;
   display: block;
   margin: 0 auto;
@@ -22173,7 +22174,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
   width: -moz-fit-content;
   width: fit-content;
   position: relative;
-  z-index: 12;
+  z-index: 8;
 }
 
 .border-section-title::before {
@@ -22223,8 +22224,9 @@ button.applyBtn.btn.btn-sm.btn-primary {
   border: 1px solid var(--tertiary-border);
   padding: 8px 20px;
   border-radius: 8px;
+  font-family: var(--special-font);
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 300;
   color: var(--primary-title);
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -31569,10 +31571,8 @@ button.applyBtn.btn.btn-sm.btn-primary {
 }
 
 .mySwiper {
-
   height: 80px;
   box-sizing: border-box;
-  padding: 10px 0;
 }
 
 .mySwiper .swiper-slide {
@@ -31769,7 +31769,10 @@ button.applyBtn.btn.btn-sm.btn-primary {
   border-radius: 12px;
   overflow: hidden;
   border: 0 solid #efefef;
-  box-shadow: 0 0 5px rgba(0, 0, 0, .1)
+  box-shadow: 0 0 5px rgba(0, 0, 0, .1);
+  min-height: 600px;
+  max-height: 600px;
+  color: white !important;
 }
 
 .box .box-header {
@@ -31904,7 +31907,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
 
 .announcement-swiper {
   width: 100%;
-  height: 600px;
+  height: 530px;
 }
 
 .profile-card-2 {
@@ -31917,11 +31920,12 @@ button.applyBtn.btn.btn-sm.btn-primary {
   border-radius: var(--bs-border-radius) !important;
   height: auto;
   max-height: 500px;
-  z-index: 99;
+  z-index: 1;
 }
 
 .profile-card-2 img {
   transition: all linear 0.25s;
+  filter: grayscale(100%);
 }
 
 .profile-card-2 .profile-name {
@@ -31983,7 +31987,8 @@ button.applyBtn.btn.btn-sm.btn-primary {
 }
 
 .profile-card-2:hover img {
-  filter: grayscale(100%);
+  transition: all linear 0.25s;
+  filter: grayscale(0%);
 }
 
 .profile-card-2:hover .profile-name {
@@ -32134,4 +32139,76 @@ button.applyBtn.btn.btn-sm.btn-primary {
   background-position: center center;
   background-color: #ededed;
   opacity: .6;
+}
+
+.logo_area {
+  /* width: 200px;
+  height: 200px;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  content: "";
+  margin-left: -150px;
+  text-align: center;
+  z-index: 99;
+  transition: 1s all ease; */
+
+  transition: 1s all ease;
+  width: 200px;
+  height: 200px;
+  text-align: center;
+  line-height: 200px;
+  position: absolute;
+  top: calc(50% - -25px);
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+.sticky-bar .logo_area {
+
+  transition: 1s all ease;
+  width: 200px;
+  height: 200px;
+  text-align: center;
+  line-height: 200px;
+  position: absolute;
+  top: calc(50% - -43px) !important;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+
+.sticky-bar .logo_area img {
+  transition: 1s all ease;
+  width: auto;
+  height: 150px;
+}
+
+@media only screen and (min-width: 200px) and (max-width: 767px) {
+
+  .inner_main_menu {
+    display: none;
+  }
+
+  .logo_area {
+    height: auto;
+    left: 0;
+    margin-left: 0;
+    position: relative;
+    top: 0;
+    width: 130px;
+  }
+
+  .logo_area img {
+    height: auto;
+    width: 100%;
+  }
+}
+
+.header-bg-style {
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 0px 22px 0 rgba(255, 255, 255, 0.37);
+  /* backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(42px); */
 }
