--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -42,7 +42,7 @@
   --dark: #28292c;
   --info: #0dcaf0;
   /* --body: rgba(255, 255, 255, .1); */
-  --body: #FFFFFF;
+  --body: #f0f0f0;
   --primary-color: #244979;
   --secondary-color: #c2a42e;
   --tertiary-color: #39a1f0;
@@ -21955,6 +21955,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
   bottom: 0px;
   right: 0px;
   z-index: -1;
+  transform: rotate(180deg);
 }
 
 @media (max-width: 991px) {
@@ -31909,7 +31910,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
 
 .announcement-swiper {
   width: 100%;
-  height: 530px;
+  height: 630px;
 }
 
 .profile-card-2 {
@@ -31920,8 +31921,8 @@ button.applyBtn.btn.btn-sm.btn-primary {
   position: relative;
   cursor: pointer;
   border-radius: var(--bs-border-radius) !important;
-  height: auto;
-  max-height: 500px;
+  height: 600px;
+  max-height: 600px;
   z-index: 1;
 }
 
@@ -31940,6 +31941,8 @@ button.applyBtn.btn.btn-sm.btn-primary {
   text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
   font-weight: bold;
   transition: all linear 0.25s;
+  background: #0000008a;
+  padding: 10px;
 }
 
 .profile-card-2 .profile-name p {
@@ -32118,7 +32121,27 @@ button.applyBtn.btn.btn-sm.btn-primary {
   content: "";
   position: absolute;
   top: 0;
-  background-image: url("../images/bg-shape-goreme-2.jpg");
+  background-image: url("../images/goreme-shape.png");
+  background-size: contain;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-color: #f0f0f0;
+}
+
+.goreme-bg-3::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  /* /* background-image: url("../images/goreme-shape.png"); */
+  transform: rotate(180deg);
+  */
+  /* background-image: url('https://via.placeholder.com/300x300?text=After+Image'); */
+  /* İkinci arka plan görseli */
+  transform: rotate(-70deg);
+  /* Görsele açılı bir efekt vermek için */
   background-size: contain;
   width: 100%;
   height: 100%;
@@ -32132,7 +32155,12 @@ button.applyBtn.btn.btn-sm.btn-primary {
   content: "";
   position: absolute;
   top: 0;
-  background-image: url("../images/bg-shape-goreme-2.jpg");
+  /* background-image: url("../images/goreme-shape.png"); */
+  /* transform: rotate(10deg); */
+  background-image: url('https://via.placeholder.com/300x300?text=Before+Image');
+  /* İlk arka plan görseli */
+  transform: rotate(0deg);
+  /* Görsele açılı bir efekt vermek için */
   background-size: contain;
   width: 100%;
   height: 100%;
@@ -32140,7 +32168,6 @@ button.applyBtn.btn.btn-sm.btn-primary {
   background-repeat: no-repeat;
   background-position: left bottom;
   background-color: #f0f0f0;
-  transform: rotate(180deg);
 }
 
 .goreme-bg-blog::before {
