--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -77,6 +77,7 @@
       #daedef 0%,
       rgba(218, 237, 239, 0) 98.91%);
   --swiper-theme-color: #244979;
+  --event-link-color: #000
 }
 
 [data-theme=dark] {
@@ -19610,7 +19611,6 @@ button.applyBtn.btn.btn-sm.btn-primary {
 
 .footer-wrapper .footer-middle-area {
   background-color: var(--white);
-  border-radius: 20px;
 }
 
 .footer-wrapper .footer-middle-area .footer-body {
@@ -21952,7 +21952,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
 
 .shape-bg-about {
   position: absolute;
-  bottom: 0px;
+  top: 0px;
   right: 0px;
   z-index: -1;
   transform: rotate(180deg);
@@ -24118,7 +24118,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
 .shape-about-two {
   position: absolute;
   left: 0px;
-  bottom: 0px;
+  top: 0px;
   z-index: -1;
 }
 
@@ -31828,7 +31828,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
 
 .event-list .event a:hover {
   text-decoration: none;
-  color: inherit
+  color: var(--event-link-color)
 }
 
 .event-list .event a:hover .info .name strong {
@@ -31922,6 +31922,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
 .profile-card-2 img {
   transition: all linear 0.25s;
   filter: grayscale(100%);
+  width: 100%;
 }
 
 .profile-card-2 .profile-name {
@@ -32001,183 +32002,6 @@ button.applyBtn.btn.btn-sm.btn-primary {
   right: 40px;
 }
 
-
-.button-29 {
-  color: white !important;
-  align-items: center;
-  appearance: none;
-  background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
-  border: 0;
-  border-radius: 6px;
-  box-shadow: rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, rgba(58, 65, 111, .5) 0 -3px 0 inset;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inline-flex;
-  height: 48px;
-  justify-content: center;
-  line-height: 1;
-  list-style: none;
-  overflow: hidden;
-  padding-left: 16px;
-  padding-right: 16px;
-  position: relative;
-  text-align: left;
-  text-decoration: none;
-  transition: box-shadow .15s, transform .15s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  will-change: box-shadow, transform;
-  font-size: 14px;
-}
-
-.button-29:focus {
-  box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
-}
-
-.button-29:hover {
-  box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
-  transform: translateY(-2px);
-}
-
-.button-29:active {
-  box-shadow: #3c4fe0 0 3px 7px inset;
-  transform: translateY(2px);
-}
-
-.button-30 {
-  color: white !important;
-  align-items: center;
-  appearance: none;
-  background-color: initial;
-  background-image: linear-gradient(-180deg, #00D775, #00BD68);
-  border-radius: 4px;
-  border-width: 0;
-  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #00D775 0 -3px 0 inset;
-  box-sizing: border-box;
-  cursor: pointer;
-  display: inline-flex;
-  height: 48px;
-  justify-content: center;
-  line-height: 1;
-  list-style: none;
-  overflow: hidden;
-  padding-left: 16px;
-  padding-right: 16px;
-  position: relative;
-  text-align: left;
-  text-decoration: none;
-  transition: box-shadow .15s, transform .15s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  will-change: box-shadow, transform;
-  font-size: 14px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.button-30:focus {
-  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-}
-
-.button-30:hover {
-  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #00BD68 0 -3px 0 inset;
-  transform: translateY(-2px);
-}
-
-.button-30:active {
-  box-shadow: #D6D6E7 0 3px 7px inset;
-  transform: translateY(2px);
-}
-
-
-.goreme-siluet-bg::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  opacity: .2;
-  background-image: url("../images/goreme-siluet.png");
-  background-size: 100%;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background-repeat: no-repeat;
-  background-position: top;
-}
-
-.goreme-bg-2::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  background-image: url("../images/goreme-shape.png");
-  background-size: contain;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background-repeat: no-repeat;
-  background-position: left bottom;
-  background-color: #f0f0f0;
-}
-
-.goreme-bg-3::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  /* /* background-image: url("../images/goreme-shape.png"); */
-  transform: rotate(180deg);
-  */
-  /* background-image: url('https://via.placeholder.com/300x300?text=After+Image'); */
-  /* İkinci arka plan görseli */
-  transform: rotate(-70deg);
-  /* Görsele açılı bir efekt vermek için */
-  background-size: contain;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background-repeat: no-repeat;
-  background-position: left bottom;
-  background-color: #f0f0f0;
-}
-
-.goreme-bg-3::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  /* background-image: url("../images/goreme-shape.png"); */
-  /* transform: rotate(10deg); */
-  background-image: url('https://via.placeholder.com/300x300?text=Before+Image');
-  /* İlk arka plan görseli */
-  transform: rotate(0deg);
-  /* Görsele açılı bir efekt vermek için */
-  background-size: contain;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background-repeat: no-repeat;
-  background-position: left bottom;
-  background-color: #f0f0f0;
-}
-
-.goreme-bg-blog::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  background-image: url("../images/new-goreme-bg.jpg");
-  background-size: 100% auto;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-color: #ededed;
-  opacity: .6;
-}
-
 .logo_area {
   /* width: 200px;
   height: 200px;
@@ -32249,7 +32073,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
 }
 
 .header-bg-style {
-  background: rgba(255, 255, 255, 0.25);
+  background: rgba(255, 255, 255, 0.45);
   box-shadow: 0 0px 22px 0 rgba(255, 255, 255, 0.37);
   /* backdrop-filter: blur(12px);
   -webkit-backdrop-filter: blur(42px); */
