--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -31428,7 +31428,18 @@ button.applyBtn.btn.btn-sm.btn-primary {
   border: solid 3px rgba(255, 255, 255, 0.3);
 }
 
+.card-header {
+  background: #ffffff9c;
+}
+
 .card .card-title {
+  font-weight: 800;
+  background: #ffffff9c;
+  border-radius: 12px;
+  padding: 10px;
+}
+
+.card .card-subtitle {
   font-weight: 800;
   background: #ffffff9c;
   border-radius: 12px;
@@ -31467,7 +31478,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
 }
 
 .card:hover .card-body {
-  margin-top: 30px;
+  /* margin-top: 30px; */
   transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
@@ -31926,7 +31937,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
 }
 
 .profile-card-2 .profile-name,
-.mayor-name {
+.mayor-name p {
   width: 100%;
   /* position: absolute;
   left: 0px;
