style minified edildi

--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -13926,7 +13926,7 @@ a:focus,
 a {
   color: var(--primary-color);
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 500;
   line-height: 1.3;
 }
@@ -25752,6 +25752,19 @@ button.applyBtn.btn.btn-sm.btn-primary {
   filter: grayscale(100%);
 }
 
+.favSwiper-active .news-card-two {
+  height: 560px;
+}
+
+.favSwiper-active .news-card-two figure {
+  height: 100%;
+}
+
+.favSwiper-active .news-card-two .card-body {
+  position: relative;
+  bottom: 40px;
+}
+
 .news-card-two:hover {
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -31483,7 +31496,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
 }
 
 .card-img {
-  height: 530px;
+  height: 540px;
   overflow: hidden;
   display: flex;
   align-items: flex-end;
@@ -32115,3 +32128,11 @@ button.applyBtn.btn.btn-sm.btn-primary {
   height: 100%;
   object-fit: cover;
 }
+
+.swiper-thumbnail {
+  width: 100px;
+  height: 60px;
+  overflow: hidden;
+}
+
+.swiper-thumbnail img {}
