--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -49,7 +49,7 @@
   --secondary-title: #505a59;
   --tertiary-title: #95b2b4;
   --pure-black: #000;
-  --primary-paragraph: #4b5051;
+  --primary-paragraph: #131313;
   --secondary-paragraph: #333333;
   --tertiary-paragraph: #787787;
   --primary-btn: var(--primary-color);
