Projeler font boyutu ayarlandı

--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -22339,7 +22339,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
 }
 
 .package-content .area-name a {
-  font-size: 1em;
+  font-size: .85em;
 }
 
 .package-content .area-name:hover {
